# mxai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
matrixbot/: __init__.py  __main__.py  bot.md  bot.py  cli.md  cli.py  config.md  config.py  credentials.md  credentials.py
matrixbot/adapters/: __init__.py  base.py  claude.py  shepherd.py
mxai/: __init__.py  __main__.py  bot.md  bot.py  cli.md  cli.py  config.md  config.py  credentials.md
mxai/adapters/: __init__.py  base.py  claude.py  shepherd.py
